docs/version-1.13/modules/en/pages/upgrades/longhorn-components/upgrade-longhorn-manager.adoc
= Upgrade Longhorn Manager
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-09-16
:page-revdate: {revdate}
:current-version: {page-component-version}

[WARNING]
====
It is recommended to create a xref:snapshots-backups/system-backups/create-system-backup.adoc[Longhorn system backup] before performing the upgrade. This ensures that all critical resources, such as volumes and backing images, are backed up and can be restored in case any issues arise.
====

== Upgrading from v{previous-version}.x

{longhorn-product-name} only supports upgrading to v{current-version} from v{previous-version}.x. For other versions, please upgrade to v{previous-version}.x first.

Starting with v1.13.0, upgrading {longhorn-product-name} also creates the xref:glossary/glossary.adoc#_longhorn_global_manager[Longhorn Global Manager] Deployment. Make sure that at least one of its Pods can be scheduled. For Helm installations, review the xref:installation-setup/installation/helm-values.adoc#_longhorn_global_manager_settings[Longhorn Global Manager Settings]; for manifest installations, review the Deployment's scheduling configuration in the deployment YAML.

For airgap upgrades when {longhorn-product-name} is installed as a Rancher app, you need to modify the image names and remove the registry URL part.

For air-gapped upgrades when {longhorn-product-name} is installed as a Rancher app, you need to modify the image names and remove the registry URL part. For example, the image `registry.example.com/longhorn/longhorn-manager:v{patch-version}` is changed to `longhorn/longhorn-manager:v{patch-version}` in Longhorn images section. For more information, see the air gap installation steps xref:installation-setup/installation/airgapped-environment.adoc#_using_a_rancher_app[here].

=== Preparing for the Upgrade

If {longhorn-product-name} was installed using a Helm Chart, or if it was installed as Rancher catalog app, check to make sure the parameters in the default StorageClass were not changed. Changing the default StorageClass's parameter might result in a chart upgrade failure. To reconfigure the parameters in the StorageClass, you can copy the default StorageClass's configuration to create another StorageClass.

The current default StorageClass has the following parameters:

[,yaml]
----
parameters:
  numberOfReplicas: <user specified replica count, 3 by default>
  staleReplicaTimeout: "30"
  fromBackup: ""
  baseImage: ""
----

== Upgrade

[IMPORTANT]
====
Always back up volumes before upgrading. If anything goes wrong, you can restore the volume using the backup.
====

=== Upgrade Using the {rancher-product-name} UI

For Kubernetes clusters managed by {rancher-product-name}, you can upgrade the {longhorn-product-name} App by updating the repository to reference a newer Helm chart version. 

The following procedure describes how to upgrade the {longhorn-product-name} App on {rancher-product-name}.

. Go to *Apps > Repositories*.
. Click *Create*.
. Select *OCI Repository* as the target.
. Provide a name for the repository, for example, `suse-storage`.
. In the *OCI Repository Host URL* field, enter:
+
`oci://dp.apps.rancher.io/charts/suse-storage`
+
image::screenshots/install/add-repo.png[Add Repository, width=100%]

. Click *Create* button.
. Verify that the repository has been added successfully.
+
image::screenshots/install/add-repo-success.png[Repository Added, width=100%]

. Go to *Apps > Charts* and find the `suse-storage` chart.
+
image::screenshots/install/find-chart.png[Find Chart, width=100%]

. Click the chart, and then click *Install*.
+
image::screenshots/install/install-chart.png[Install Chart, width=100%]

. On the next page, set `global.imagePullSecrets` to `application-collection`, and then click *Install*.
+
Refer to the https://docs.apps.rancher.io/get-started/authentication/#kubernetes[authentication documentation] for credential setup.
+
[,yaml]
----
global:
  cattle:
    windowsCluster:
      defaultSetting:
        systemManagedComponentsNodeSelector: kubernetes.io/os:linux
        taintToleration: cattle.io/os=linux:NoSchedule
      enabled: false
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - effect: NoSchedule
          key: cattle.io/os
          operator: Equal
          value: linux
  imagePullSecrets: [application-collection]
  imageRegistry: ''
----

. This upgrades `suse-storage` `{current-version}`
+
image::screenshots/install/update-repo.png[Update Repository, width=100%]

. After the upgrade, go to *Apps > Repositories*.
+
[NOTE]
.For {rancher-product-name} versions earlier than v2.13 follow these steps:
====
[lowerroman]
. Select the `suse-storage` repository, click the three-dot menu, and choose *Edit Config*.
. *Workaround*: Update the URL to `oci://dp.apps.rancher.io/charts/suse-storage:{patch-version}` to ensure the version is detected.
. The repository should be updated successfully.
+
image::screenshots/install/updated-repo.png[Update Repository, width=100%]

. Go to *Apps > Installed Apps*.
. In the `longhorn-system` namespace, under the *Upgradable* column, look for a yellow-highlighted `{patch-version}` label.
+
image::screenshots/install/upgradable-column.png[Upgradable Version, width=100%]

. Click the yellow `{patch-version}` label to open the upgrade page.
+
image::screenshots/install/upgrade-page.png[Upgrade Page, width=100%]

. Click *Next*.
. Ensure that `global.imagePullSecrets` is set to `application-collection`, and then click *Upgrade*.
+
image::screenshots/install/upgrade-progress.png[Upgrade Progress, width=100%]
====
+
. Go to *Apps > Charts* and select the `suse-storage` chart.
. Select the desired upgrade version from the *Chart Versions* panel.
+
image::screenshots/install/current-version-rancher-2-13_and_above.png[Update Repository in Rancher 2.13+, width=100%]

. Click *Upgrade to this version*.
. After the upgrade completes, verify that the `suse-storage` chart version is updated to `{patch-version}`.
+
image::screenshots/install/upgrade-success.png[Upgrade Success, width=100%]

=== Upgrade with Helm

Upgrading the {longhorn-product-name} Helm chart involves updating your deployment to a newer version or switching between Longhorn community images and {longhorn-product-name} images.

The general Helm command for upgrading is:

[subs="+attributes",shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
  --namespace longhorn-system \
  --version <version> \ # Replace with the version you would like to upgrade to
  --set global.imagePullSecrets=<PULL_IMAGE_SECRET> \
  -f values.yaml
----

[NOTE]
====
To create a secret, follow the https://docs.apps.rancher.io/get-started/authentication/#kubernetes[AppCo documentation].
====

Or, if upgrading without a specific `values.yaml` file and only changing the version:

[subs="+attributes",shell]
----
helm upgrade longhorn oci://dp.apps.rancher.io/charts/suse-storage \
  --namespace longhorn-system \
  --version <version> \ # Replace with the version you would like to upgrade to
  --set global.imagePullSecrets=<PULL_IMAGE_SECRET>
----

* *Upgrade Path*: Refer to the official xref:upgrades/upgrades.adoc[{longhorn-product-name} upgrade documentation] for specific version-to-version upgrade paths, prerequisites, and post-upgrade verification steps. This is important to ensure a smooth upgrade and data integrity.
* *Configuration Changes*: If you have custom configurations, ensure you carry them over to the new chart version, merging with any default changes.

=== Upgrade with Fleet

Update the value of `helm.version` in the `fleet` YAML file of your GitOps repository.

[subs="+attributes",yaml]
----
helm:
  repo: https://charts.longhorn.io
  chart: longhorn
  version: v{patch-version} # Replace with the {longhorn-product-name} version you would like to upgrade to
  releaseName: longhorn
----

=== Upgrade with Flux

Update the value of `spec.chart.spec.version` in the `HelmRelease` YAML file of your GitOps repository.

[subs="+attributes",yaml]
----
spec:
  chart:
    spec:
      chart: longhorn
      reconcileStrategy: ChartVersion
      sourceRef:
        kind: HelmRepository
        name: longhorn
      version: v{patch-version} # Replace with the {longhorn-product-name} version you would like to upgrade to
----

=== Upgrade with Argo CD

Update the value of `targetRevision` in the `Application` YAML file of your GitOps repository.

[subs="+attributes",yaml]
----
spec:
  project: default
  sources:
    - chart: longhorn
      repoURL: https://charts.longhorn.io
      targetRevision: v{patch-version} # Replace with the {longhorn-product-name} version you would like to upgrade to
----

Then wait for all the pods to become running and {longhorn-product-name} UI working. For example:

[,shell]
----
$ kubectl -n longhorn-system get pod
NAME                                                  READY   STATUS    RESTARTS      AGE
engine-image-ei-4dbdb778-nw88l                        1/1     Running   0             4m29s
longhorn-ui-b7c844b49-jn5g6                           1/1     Running   0             75s
longhorn-manager-z2p8h                                1/1     Running   0             71s
instance-manager-b34d5db1fe1e2d52bcfb308be3166cfc     1/1     Running   0             65s
longhorn-driver-deployer-6bd59c9f76-jp6pg             1/1     Running   0             75s
engine-image-ei-df38d2e5-zccq5                        1/1     Running   0             65s
csi-snapshotter-588457fcdf-h2lgc                      1/1     Running   0             30s
csi-resizer-6d8cf5f99f-8v4sp                          1/1     Running   1 (30s ago)   37s
csi-snapshotter-588457fcdf-6pgf4                      1/1     Running   0             30s
csi-provisioner-869bdc4b79-7ddwd                      1/1     Running   1 (30s ago)   44s
csi-snapshotter-588457fcdf-p4kkn                      1/1     Running   0             30s
csi-attacher-7bf4b7f996-mfbdn                         1/1     Running   1 (30s ago)   50s
csi-provisioner-869bdc4b79-4dc7n                      1/1     Running   1 (30s ago)   43s
csi-resizer-6d8cf5f99f-vnspd                          1/1     Running   1 (30s ago)   37s
csi-attacher-7bf4b7f996-hrs7w                         1/1     Running   1 (30s ago)   50s
csi-attacher-7bf4b7f996-rt2s9                         1/1     Running   1 (30s ago)   50s
csi-resizer-6d8cf5f99f-7vv89                          1/1     Running   1 (30s ago)   37s
csi-provisioner-869bdc4b79-sn6zr                      1/1     Running   1 (30s ago)   43s
longhorn-csi-plugin-b2zzj                             2/2     Running   0             24s
----

Next, xref:upgrades/longhorn-components/manually-upgrade-engine.adoc[upgrade Longhorn engine].

=== Upgrading from Unsupported Versions

We only support upgrading to v{patch-version} from v{previous-version}.x. For other versions, please upgrade to v{previous-version}.x first.

If you attempt to upgrade from an unsupported version, the upgrade would fail. When encountering an upgrade failure, please consider the following scenarios to recover the state based on different upgrade methods.

== TroubleShooting

*Error*: `"longhorn" is invalid: provisioner: Forbidden: updates to provisioner are forbidden.`

* This means there are certain modifications applied to the default storageClass and you need to clean up the old one before upgrade.
* To clean up the deprecated StorageClass, run this command:
+
[,bash]
----
kubectl delete -f https://raw.githubusercontent.com/longhorn/longhorn/v{{< current-version >}}/examples/storageclass.yaml
----
